added query abstraction generation
